# simple_market_regressions

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/examples/: ewj_nikkei.yaml  ewt_taiwan.yaml  ewy_kospi.yaml  qqq_ndx.yaml  soxx_semis.yaml
notebooks/: 01_cross_market_regression_frontface.ipynb
src/cross_market_regression/: __init__.py  config.py
src/cross_market_regression/bar_state/: __init__.py  dataset.py  features.py  io.py  predict.py  train.py
src/cross_market_regression/cli/: explain_model.py  predict_bar_state_live.py  predict_live.py  train_bar_state_model.py  train_model.py  train_trading_model.py
src/cross_market_regression/data/: __init__.py  alignment.py  csv_provider.py  dataset.py  dataset_builder.py  frame.py  fx_provider.py  provider_registry.py  registry.py  schwab.py  schwab_auth.py  schwab_provider.py  target_provider.py
src/cross_market_regression/features/: feature_builder.py  feature_specs.py  returns.py  scalers.py  scaling.py  supervised.py
src/cross_market_regression/modeling/: __init__.py  diagnostics.py  explain.py  fixed_multi_window_policy.py  linear_tf_model.py  metrics.py  model.py  persistence.py  predict.py  trading_losses.py  trading_train.py  train.py
tests/: test_alignment.py  test_alignment_no_lookahead.py  test_bar_state_dataset.py  test_bar_state_features.py  test_bar_state_io.py  test_calendar_mapping.py  test_canonical_training_flow.py  test_config.py  test_config_loading.py  test_csv_provider.py  test_feature_math.py  test_features.py  test_fixed_multi_window_policy.py  test_generic_reuse.py  test_model_save_load.py  test_modeling.py  test_prediction_formula.py  test_provider_registry.py  test_registry.py  test_scaling.py  test_schwab_provider.py  test_trading_losses.py  test_training_workflow.py
