[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-market-regression"
version = "0.1.0"
description = "Reusable front-face cross-market linear regression framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "tensorflow>=2.15",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cmr-train = "cross_market_regression.cli.train_model:main"
cmr-predict-live = "cross_market_regression.cli.predict_live:main"
cmr-explain = "cross_market_regression.cli.explain_model:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
