[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-market-regressions"
version = "0.1.0"
description = "Reusable front-face cross-market linear regression framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tensorflow>=2.15",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
dev = ["pytest>=8.0"]

[project.scripts]
cmr-train = "cross_market_regression.cli.train_model:main"
cmr-predict-live = "cross_market_regression.cli.predict_live:main"
cmr-explain = "cross_market_regression.cli.explain_model:main"
cmr-train-bar-state = "cross_market_regression.cli.train_bar_state_model:main"
cmr-predict-bar-state = "cross_market_regression.cli.predict_bar_state_live:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
